<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Compatibility-only resource: Onion Transfer is intentionally hidden from the Header/ActionBar and exposed from Settings. -->
    <item
        android:id="@+id/menu_onion_transfer"
        android:icon="@drawable/ic_onion"
        android:title="@string/onion_transfer_title"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_view_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/view_downloads"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/pref_category_settings"
        app:showAsAction="ifRoom" />
</menu>
